--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -8,6 +8,9 @@
     /* Adjust background color as needed */
     color: #ffffff;
     /* Adjust text color as needed */
+    z-index: 999;
+    
+
 }
 
 /* Logo styles */
@@ -169,4 +172,21 @@
         align-items: center;
        
     }
+}
+
+@media  (max-width:415px) {
+    .nav{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .login-button{
+        font-size: 10px;
+        height: 30px;
+        width: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
 }
